wry for webgui & tray icon

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,7 +13,5 @@ serialport = "4.0.1"
 tokio = { version = "1", features = ["full"] }
 tower-http = { version = "0.2.0", features = ["fs"] }
 futures = "0.3"
-tray-item = "0.7.0"
-
-[build-dependencies]
-windres = "0.2.2"
+wry = { version = "0.14.0", features = ["tray"] }
+tao = { version = "0.7", default-features = false, features = [ "serde" ] }
